--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts
-spring.datasource.username= student
-spring.datasource.password= chocolatefrog
+spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts school
+spring.datasource.username= dekan
+spring.datasource.password= 6900
 spring.jpa.hibernate.ddl-auto= update
 
+students.avatar.dir.path= avatars
