--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts school
-spring.datasource.username= dekan
-spring.datasource.password= 6900
-spring.jpa.hibernate.ddl-auto= update
+spring.datasource.username=dekan
+spring.datasource.password=6900
+spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 students.avatar.dir.path= avatars
