--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 logging.level.ru.hogwarts.school=DEBUG
 students.avatar.dir.path= avatars
+server.port=8080
